syntax = "proto3";

package sdkpb;
option go_package = "your/module/path/sdkpb;sdkpb";

// --- Core Context Types ---

message Context {
  // placeholder for now
}

message RPCContext {
  Context context = 1;
}

// --- Encoding and Data ---

enum EncodingType {
  ENCODING_TYPE_UNSPECIFIED = 0;
  ENCODING_TYPE_BASE58      = 1;
  ENCODING_TYPE_BASE64      = 2;
  ENCODING_TYPE_JSON        = 3;
}

message DataBytesOrJSON {
  EncodingType raw_data_encoding = 1;
  bytes as_decoded_binary        = 2;
  bytes as_json                  = 3;
}

// --- Solana Account (simplified) ---

message Account {
  uint64 lamports        = 1;
  string owner           = 2; // was PublicKey
  DataBytesOrJSON data   = 3;
  bool executable        = 4;
  string rent_epoch      = 5; // represents *big.Int as string
  uint64 space           = 6;
}

// --- Top-level reply ---

message GetAccountInfoReply {
  RPCContext rpc_context = 1;
  Account value           = 2;
}



// ----------------------
//  TxStatus enum
// ----------------------

enum TxStatus {
  TX_STATUS_FATAL    = 0;
  TX_STATUS_REVERTED = 1;
  TX_STATUS_SUCCESS  = 2;
}

// ----------------------
//  Receiver contract execution status
// ----------------------

message ReceiverContractExecutionStatus {
  // Placeholder â€“ fill in actual fields later
  string message = 1;
  int32 code     = 2;
}


// ----------------------
//  WriteReportReply
// ----------------------

message WriteReportReply {
  TxStatus tx_status                                      = 1;
  ReceiverContractExecutionStatus receiver_execution_status = 2;
  bytes tx_hash                                            = 3;
  string error_message                                     = 4;
}